manifests/apps/netboot-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netboot-app
  namespace: netboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netboot-app
  template:
    metadata:
      labels:
        app: netboot-app
    spec:
      containers:
        - name: netboot
          image: ghcr.io/netbootxyz/netbootxyz:01f9790c197c69ad0b95d203c20a50f3cb74ded5@sha256:077c0c09c53043416d581406618713af81d2821d083cd6f0dc431a4448e8dfbd          
          ports:
            - name: tftp
              protocol: UDP
              containerPort: 69
            - name: http
              containerPort: 80
            - name: dashboard
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: http
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 60
            periodSeconds: 60
