manifests/apps/netboot-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netboot-app
  namespace: netboot-app
spec:
  selector:
    app: netboot-app
  ports:
    - protocol: UDP
      port: 69
      targetPort: 69
      name: tftp
    - protocol: TCP
      port: 80
      targetPort: 80
      name: content
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: dashboard
