manifests/apps/netboot-app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netboot-content
  namespace: netboot-app
spec:
  parentRefs:
    - name: http-gateway
      namespace: gateways-system
  hostnames:
    - netboot-content.imavgs.no
  rules:
    - backendRefs:
        - name: netboot-http
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netboot-dash
  namespace: netboot-app
spec:
  parentRefs:
    - name: http-gateway
      namespace: gateways-system
  hostnames:
    - netboot-dash.imavgs.no
  rules:
    - backendRefs:
        - name: netboot-dash
          port: 3000
