manifests/apps/netboot-app/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: local-only
  namespace: netboot-app
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: netboot-dash
  authorization:
    defaultAction: Deny
